Rake tasks that run automatically on page refresh

--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -64,6 +64,9 @@
     <%= f.number_field :baron %>
   </div>
   <div class="actions">
+      <%= f.label :updatePlayer %>
+  </div>
+  <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
