--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,13 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<html>
+    <head>
+        <title>Stats for Amateur League of Legends Players</title>
+    </head>
+    <body>
+        <h1>League of Legends Amatuer Stats</h1>
+        <p>
+            Today's top player is:
+            {@players.
+        </p>
+    </body>
+</html>
+
