--- a/app/views/leagues/_form.html.erb
+++ b/app/views/leagues/_form.html.erb
@@ -14,6 +14,7 @@
   <div class="field">
     <%= f.label :name %><br>
     <%= f.text_field :name %>
+    <p id="name_error" class="bg-danger">This League already exists</p>
   </div>
   <div class="field">
     <%= f.label :description %><br>
