--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,16 +9,16 @@
         #name_error {display:none;}
     </style>
     <script>
-    $(document).ready(function() {
-        $("#league_name").on("blur", function() {
-            var valid = true;
+$(document).ready(function() {
+    $("#player_name").on("blur", function() {
+        var valid = true;
             $.ajax({
-                url: "/leagues.json",
+                url: "/players.json",
                 success: function(data) {
-                    for(i = 0; i < data.length; i++) {
-                        if (data[i].name == $("#league_name").val()) {
+                    for(i=0; i < data.length; i++) {
+                        if (data[i].name == $("#player_name").val()) {
                             $("#name_error").show();
-                            valid = false;
+                            valid = false
                             break;
                         }
                     }
