--- a/app/views/leagues/_form.html.erb
+++ b/app/views/leagues/_form.html.erb
@@ -1,3 +1,27 @@
+<head>
+    <script>
+$(document).ready(function() {
+    $("#league_name").on("blur", function() {
+        var valid = true;
+            $.ajax({
+                url: "/leagues.json",
+                success: function(data) {
+                    for(i=0; i < data.length; i++) {
+                        if (data[i].name == $("#league_name").val()) {
+                            $("#name_error").show();
+                            valid = false
+                            break;
+                        }
+                    }
+                    if (valid) {
+                        $("#name_error").hide();
+                    }
+                }
+            });
+        });
+    });      
+    </script>
+</head>
 <%= form_for(@league) do |f| %>
   <% if @league.errors.any? %>
     <div id="error_explanation">
