--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -14,6 +14,7 @@
   <div class="field">
       <%= f.label :riotID %><br>
       <%= f.text_field :riotID %>
+      <p id="name_error" class="bg-danger">This Riot ID already exists</p>
   </div>
   <div class="field">
       <%= f.label :name %><br>
